--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.0",
-        "laravie/parser": "^2.0"
+        "laravie/parser": "^2.0",
+        "nathanmac/parser": "^4.1",
+        "orchestra/parser": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
