--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/ui": "^1.0",
         "laravie/parser": "^2.0",
         "nathanmac/parser": "^4.1",
-        "orchestra/parser": "^4.0"
+        "orchestra/parser": "^4.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
